add metadata to backend when pushing
